--- a/login.html
+++ b/login.html
@@ -207,11 +207,10 @@
   <main role="main" aria-labelledby="page-title">
     <!-- Left: branding / context -->
     <section class="card brand" aria-label="About ATIE">
-      <h1 id="page-title">Welcome back to ATIE</h1>
+      <h1 id="page-title">Welcome back to Vangarde</h1>
       <p>
         Sign in to access your dashboard, manage submissions and collaborate
-        with your team in real time. Built with accessibility and responsiveness
-        in mind.
+        with your team in real time. 
       </p>
       <div class="badges" aria-label="Highlights">
         <span class="badge">Accessible</span>
@@ -344,3 +343,4 @@
   </script>
 </body>
 </html>
+
