--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
   -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sign in • ATIE</title>
+  <title>Sign in</title>
 
   <!-- Acknowledgement: Inter font via Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -343,4 +343,5 @@
   </script>
 </body>
 </html>
+
 
